--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logo.png
+    - assets/glogo.png
+    - assets/b1.jpg
+    - assets/d.png
+    - assets/s.png
+    - assets/e.png
+    - assets/h.png
+    - assets/b.png
+    - assets/book.png
+    - assets/h.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
