--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
+
     - assets/glogo.png
+    - assets/WI.jpg
+    - assets/logo.png
     - assets/b1.jpg
     - assets/d.png
     - assets/s.png
