--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  url_launcher: ^6.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,7 +65,7 @@ flutter:
 
     - assets/glogo.png
     - assets/WI.jpg
-    - assets/logo.png
+    - assets/lo.jpg
     - assets/b1.jpg
     - assets/d.png
     - assets/s.png
