--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.17.3
   uuid: ^4.4.0
   fluttertoast: ^8.2.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
